Remove documentation for `--add-exports` and `--add-opens` flags
These are now specified in the manifest: unknown commit

PiperOrigin-RevId: 432959471